--- a/requirements.txt
+++ b/requirements.txt
@@ -184,7 +184,7 @@ python-Levenshtein==0.26.0
 python-multipart==0.0.12
 python-utils==3.8.2
 pytz==2023.3.post1
-pywin32==306
+pywin32==306; sys_platform == "win32"
 PyYAML==6.0.2
 pyzmq==26.0.3
 queuelib==1.7.0
