--- a/requirements.txt
+++ b/requirements.txt
@@ -225,7 +225,8 @@ sympy==1.13.1
 tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow>=2.16,<2.17
+tensorflow>=2.16
+
 
 tensorlayer==2.2.5
 termcolor==2.4.0
