--- a/requirements.txt
+++ b/requirements.txt
@@ -156,7 +156,10 @@ progressbar2==4.3.2
 prompt_toolkit==3.0.47
 propcache==0.2.0
 Protego==0.3.1
-protobuf==5.29.1
+
+# Updated line
+protobuf>=3.20.3,<5.0.0
+
 psutil==5.9.8
 psycopg==3.2.6
 psycopg-binary==3.2.6
@@ -218,15 +221,19 @@ SQLAlchemy==2.0.36
 sqlparse==0.5.0
 stack-data==0.6.3
 starlette==0.40.0
-streamlit==1.29.0
+
+# Updated line
+streamlit>=1.25,<1.30
+
 streamlit-lottie==0.0.5
 streamlit-option-menu==0.3.6
 sympy==1.13.1
 tenacity==8.2.3
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow>=2.16
 
+# Already fine
+tensorflow>=2.16
 
 tensorlayer==2.2.5
 termcolor==2.4.0
